--- a/src/views/addCat.html
+++ b/src/views/addCat.html
@@ -33,9 +33,7 @@
             <input name="imageUrl" type="text" id="image">
             <label for="group">Breed</label>
             <select name="breed" id="group">
-                <option value="Fluffy Cat">Fluffy Cat</option>
-				<option value="Fluffy Cat">Fluffy Cat</option>
-				<option value="Fluffy Cat">Fluffy Cat</option>
+                {{breedOptions}}
             </select>
             <button type="submit">Add Cat</button>
         </form>
